--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,35 +4,35 @@ body {
     padding: 0;
 }
 
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #fff;
-    border-bottom: 1px solid #ccc;
-}
+/*header {*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*    align-items: center;*/
+/*    padding: 10px 20px;*/
+/*    background-color: #fff;*/
+/*    border-bottom: 1px solid #ccc;*/
+/*}*/
 
-.header-left h1 {
-    margin: 0;
-    color: #FFA500;
-}
+/*.header-left h1 {*/
+/*    margin: 0;*/
+/*    color: #FFA500;*/
+/*}*/
 
-.header-right {
-    display: flex;
-    align-items: center;
-}
+/*.header-right {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*}*/
 
-.header-right .user-info,
-.header-right .questions,
-.header-right .find-car {
-    margin-left: 20px;
-}
+/*.header-right .user-info,*/
+/*.header-right .questions,*/
+/*.header-right .find-car {*/
+/*    margin-left: 20px;*/
+/*}*/
 
-.header-right .find-car a {
-    color: #FFA500;
-    text-decoration: none;
-}
+/*.header-right .find-car a {*/
+/*    color: #FFA500;*/
+/*    text-decoration: none;*/
+/*}*/
 
 nav {
     background-color: #f8f8f8;
@@ -173,42 +173,42 @@ aside ul li {
     width: 32%;
 }
 
-footer {
-    background-color: #fff;
-    border-top: 1px solid #ccc;
-    padding: 20px;
-}
+/*footer {*/
+/*    background-color: #fff;*/
+/*    border-top: 1px solid #ccc;*/
+/*    padding: 20px;*/
+/*}*/
 
-.footer-columns {
-    display: flex;
-    justify-content: space-around;
-}
+/*.footer-columns {*/
+/*    display: flex;*/
+/*    justify-content: space-around;*/
+/*}*/
 
-.footer-column h3 {
-    margin-top: 0;
-}
+/*.footer-column h3 {*/
+/*    margin-top: 0;*/
+/*}*/
 
-.footer-column ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
+/*.footer-column ul {*/
+/*    list-style: none;*/
+/*    padding: 0;*/
+/*    margin: 0;*/
+/*}*/
 
-.footer-column ul li {
-    margin-bottom: 10px;
-}
+/*.footer-column ul li {*/
+/*    margin-bottom: 10px;*/
+/*}*/
 
-.footer-column ul li a {
-    text-decoration: none;
-    color: #333;
-}
+/*.footer-column ul li a {*/
+/*    text-decoration: none;*/
+/*    color: #333;*/
+/*}*/
 
-.footer-bottom {
-    text-align: center;
-    margin-top: 20px;
-}
+/*.footer-bottom {*/
+/*    text-align: center;*/
+/*    margin-top: 20px;*/
+/*}*/
 
-.footer-bottom p {
-    margin: 0;
-    color: #999;
-}
+/*.footer-bottom p {*/
+/*    margin: 0;*/
+/*    color: #999;*/
+/*}*/
