--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -439,10 +439,11 @@
   
 }
 .wra{
-    max-width: 1200px;
+      max-width: 1200px;
       margin: 0 auto;
       padding: 20px;
       background-color: #006E97;
+      margin-top: 30px;
 }
 .tex{
     margin: 0 auto;
