--- a/public/css/style_FAQ.css
+++ b/public/css/style_FAQ.css
@@ -1,10 +1,3 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: silver;
-    margin: 0;
-    padding: 0;
-}
-
 .faq-container {
     max-width: 1500px;
     margin: 50px auto;
@@ -14,7 +7,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+.faq-title {
     text-align: center;
     font-size: 2rem;
     margin-bottom: 20px;
