--- a/view/FrontEnd/view_profil.html
+++ b/view/FrontEnd/view_profil.html
@@ -1,49 +1,52 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" href="view_profil.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="resp.css" />
     <title>Profil</title>
-  </head>
-  <body>
+</head>
+<body>
+    <div class="bloc">
+        <nav>
+            <ul class="links">
+                <li><a href="#" onclick=""><b>MES ANNONCES</b></a></li>
+                <li><a href="#" class="active" onclick=""><b>MON COMPTE</b></a></li>
+                <li><a href="#" onclick=""><b>AJOUTER UNE ANNONCE</b></a></li>
+                <li><a href="#" onclick=""><b>MES MESSAGES</b></a></li>
+                <li><a href="#" onclick=""><b>MES NOTIFICATIONS</b></a></li>
+            </ul>
+            </nav>
+      
+      
+            <main>
+      
+          <aside>
+              <ul>
+                  <li><button class="side-button active" onclick="">Modifier mon profile</button></li>
+                  <li><button class="side-button" onclick="">Paramètres du compte</button></li>
+                  <li><button class="side-button" onclick="">Moyens de paiement</button></li>
+                  <li><button class="side-button" onclick="">Adresse postale</button></li>
+              </ul>
+          </aside> 
+      
+      
+          <section id="profile" class="account-section">
+            <h2>Votre logo</h2>
+            <form>
+                <div class="form-group">
+                    <img src="images/test.jpg" /> <br>
+                    <p><b>information sur l'agence</b></p> 
+                    <label for="nom"><b>Nom de l'agence</b></label>
+                    <input type="text" id="nom" value="Agence Elitcar">
+                </div>   
+            </form>
+        </section>
+      
+        
+        </main>
+    </div>
 
-    <nav>
-      <ul>
-          <li><a href="#" onclick=""><b>MES ANNONCES</b></a></li>
-          <li><a href="#" class="active" onclick=""><b>MON COMPTE</b></a></li>
-          <li><a href="#" onclick=""><b>AJOUTER UNE ANNONCE</b></a></li>
-          <li><a href="#" onclick=""><b>MES MESSAGES</b></a></li>
-          <li><a href="#" onclick=""><b>MES NOTIFICATIONS</b></a></li>
-      </ul>
-      </nav>
-
-
-      <main>
-
-    <aside>
-        <ul>
-            <li><button class="side-button active" onclick="">Modifier mon profile</button></li>
-            <li><button class="side-button" onclick="">Paramètres du compte</button></li>
-            <li><button class="side-button" onclick="">Moyens de paiement</button></li>
-            <li><button class="side-button" onclick="">Adresse postale</button></li>
-        </ul>
-    </aside> 
-
-
-    <section id="profile" class="account-section">
-      <h2>Votre logo</h2>
-      <form>
-          <div class="form-group">
-              <img src="images/test.jpg" /> <br>
-              <p><b>information sur l'agence</b></p> 
-              <label for="nom"><b>Nom de l'agence</b></label>
-              <input type="text" id="nom" value="Agence Elitcar">
-          </div>   
-      </form>
-  </section>
-
-  
-  </main>
-  </body>
+    
+</body>
 </html>
