--- a/public/css/particulier_styles.css
+++ b/public/css/particulier_styles.css
@@ -304,7 +304,7 @@ aside ul li {
     text-align: left;
 }
 
-.user-table th {
+.user-gi le th {
     background-color: #f5f5f5;
     font-weight: bold;
 }
